--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
   <body>
     <main>
       <h1>Pitches</h1>
-      <a href="pitches/procore.pdf">Procore</a>
-      <a href="pitches/kaspi.pdf">Kaspi</a>
+      <a href="pitches/CFLT(Sept25).pdf">Confluent</a>
+      <a href="pitches/GRND(Nov25).pdf">Grindr</a>
+      <a href="pitches/PCOR(Dec25).pdf">Procore</a>
     </main>
   </body>
 </html>
