--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <body>
     <main>
       <h1>Pitches</h1>
+      <p>David Morales Lam. 26 y/o. Tech Investor.</p>
       <a href="pitches/CFLT(Sept25).pdf">Confluent</a>
       <a href="pitches/GRND(Nov25).pdf">Grindr</a>
       <a href="pitches/PCOR(Dec25).pdf">Procore</a>
