--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   </head>
   <body>
     <main>
+      <h1>Intro</h1>
+      <a href="DMLFocus.pdf">Background</a>
       <h1>Pitches</h1>
       <p>David Morales Lam. 26 y/o. Tech Investor. :)</p>
       <a href="pitches/CFLT(Sept25).pdf">Confluent</a>
